# blitzkernels

./: Cargo.toml  LICENSE  QUICKSTART.md  README.md  TUTORIAL.md
.github/workflows/: ci.yml
kernels/blitz-attention/: Cargo.toml
kernels/blitz-attention/src/: config.rs  lib.rs
kernels/blitz-bf16-matmul/: Cargo.toml
kernels/blitz-bf16-matmul/src/: lib.rs
kernels/blitz-embedding/: Cargo.toml
kernels/blitz-embedding/src/: config.rs  lib.rs
kernels/blitz-flash-attention/: Cargo.toml
kernels/blitz-flash-attention/src/: config.rs  lib.rs
kernels/blitz-fused-mlp/: Cargo.toml
kernels/blitz-fused-mlp/src/: config.rs  lib.rs
kernels/blitz-int8-matmul/: Cargo.toml
kernels/blitz-int8-matmul/src/: lib.rs
kernels/blitz-kv-cache/: Cargo.toml
kernels/blitz-kv-cache/src/: config.rs  lib.rs
kernels/blitz-layernorm-gelu/: Cargo.toml
kernels/blitz-layernorm-gelu/src/: config.rs  lib.rs
kernels/blitz-rmsnorm/: Cargo.toml
kernels/blitz-rmsnorm/src/: lib.rs
kernels/blitz-rope/: Cargo.toml
kernels/blitz-rope/src/: lib.rs
kernels/blitz-swiglu/: Cargo.toml
kernels/blitz-swiglu/src/: config.rs  lib.rs
kernels/blitz-token-sampler/: Cargo.toml
kernels/blitz-token-sampler/src/: lib.rs
tools/blitz-benchmark/: Cargo.toml
tools/blitz-benchmark/src/: main.rs
