[package]
name = "blitz-embedding"
description = "Batched token embedding kernel: mean-pool + L2 norm, wasm32-wasip2"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []

[dependencies]

