[package]
name = "blitz-fused-mlp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fused MLP kernel (Linear→LayerNorm→GELU→Linear) for transformer FFN blocks — pure Rust + WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []

[dependencies]
libm = { version = "0.2", optional = true, default-features = false }
